feat: support multiple bank account numbers
