# be/docs/swagger.json
@@ -1187,8 +1187,11 @@
         "model.BankAccountResponse": {
             "type": "object",
             "properties": {
-                "account_number": {
-                    "type": "string"
+                "account_numbers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "balance": {
                     "description": "Initial/manual balance",
@@ -1243,13 +1246,17 @@
         "model.CreateBankAccountRequest": {
             "type": "object",
             "required": [
-                "account_number",
+                "account_numbers",
                 "name"
             ],
             "properties": {
-                "account_number": {
-                    "type": "string",
-                    "maxLength": 50
+                "account_numbers": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "type": "string",
+                        "maxLength": 50
+                    }
                 },
                 "balance": {
                     "type": "number"
@@ -1580,9 +1587,13 @@
         "model.UpdateBankAccountRequest": {
             "type": "object",
             "properties": {
-                "account_number": {
-                    "type": "string",
-                    "maxLength": 50
+                "account_numbers": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "type": "string",
+                        "maxLength": 50
+                    }
                 },
                 "balance": {
                     "type": "number"
